--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -18,6 +18,7 @@
                     <th>Km</th>
                     <th>Fuel</th>
                     <th>License</th>
+                    <th>Marque</th>
                     <th>IsVisible</th>
                     <th>actions</th>
                 </tr>
@@ -33,6 +34,7 @@
                     <td>{{ annonce.km }}</td>
                     <td>{{ annonce.fuel }}</td>
                     <td>{{ annonce.license ? 'Yes' : 'No' }}</td>
+                    <td>{{ annonce.marque.name }}</td>
                     <td>{{ annonce.isVisible ? 'Yes' : 'No' }}</td>
                     <td>
                         <a class="btn btn-primary mb-2" href="{{ path('app_annonce_show', {'id': annonce.id}) }}">Voir</a>
